--- a/Pmercurium/app_mercurium/templates/list_transactions.html
+++ b/Pmercurium/app_mercurium/templates/list_transactions.html
@@ -199,8 +199,23 @@
             </form>
         </div>
     </div> -->
-    <div class="graphic-container">
     </div>
+        <div class ="pagination">
+        <span class="step-links">
+            {% if items_list.has_previus %}
+                <a href="?page={{ items_list.previus_page_number}}"><i> previus </i></a>            
+            {% endif %}
+
+            <span class="current">
+                {{ items_list.number}} de {{ items_list.paginator.num_pages}}
+            </span>
+
+            {% if items_list.has_next %}
+                <a href="?page={{ items_list.next_page_number}}"><i> next </i></a>            
+            {% endif %}
+        </span>
+    </div>
+    <div class="graphic-container">
     <footer>
     </footer>
     <script src="{% static 'js/app.js' %}"></script>
