--- a/Pmercurium/app_mercurium/templates/list_transactions.html
+++ b/Pmercurium/app_mercurium/templates/list_transactions.html
@@ -97,7 +97,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for item in items %}
+                    {% for item in items_list %}
                         <tr>
                             <td>{{item.description}}</td>
                             <td>{{item.type_item}}</td>
@@ -208,5 +208,22 @@
     <footer>
     </footer>
     <script src="{% static 'js/app.js' %}"></script>
+    
+    <div class ="pagination">
+        <span class="step-links">
+            {% if items_list.has_previus %}
+                <a href="?page={{ items_list.previus_page_number}}"><i> previus </i></a>            
+            {% endif %}
+
+            <span class="current">
+                {{ items_list.number}} de {{ items_list.paginator.num_pages}}
+            </span>
+
+            {% if items_list.has_next %}
+                <a href="?page={{ items_list.next_page_number}}"><i> next </i></a>            
+            {% endif %}
+        </span>
+
+    </div>    
 </body>
 </html>
