--- a/Pmercurium/app_mercurium/static/css/style.css
+++ b/Pmercurium/app_mercurium/static/css/style.css
@@ -64,7 +64,31 @@ body {
     color: white;
 }
 
+/* Dashboard */
 
+.dashboard-container {
+    display: flex;
+    background-color: var(--bm-color);
+    border: 3px solid var(--bm-color);
+    width: 66.6%;
+    height: 20%;
+    margin-left: 15%;
+    border-radius: 0px 0px 10px 10px;   
+}
+
+.box-1, .box-2, .box-3, .box-4, .box-5, .box-6{
+    flex: 1;
+    margin: 1.5%;
+    background-color: white;
+    color: var(--bo-color);
+    border: 3px solid var(--bm-color);
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgb(4, 18, 63);
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    font-weight: 500;
+    font-size: 1rem;
+}
 
 /* Container Conteudo */
 .content-container {
