--- a/Pmercurium/app_mercurium/templates/list_transactions.html
+++ b/Pmercurium/app_mercurium/templates/list_transactions.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercurium</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/index_style.css' %}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -66,7 +65,7 @@
         <div class="table-container">
             <table class="main-table" id="main-table">
                 <a href="create.html"><button class="modal-form"><img width="30" src="{% static 'img/png/plus-signal.png' %}">Adicionar</button></a>
-                <a href="#"><button class="modal-form"><img width="30" src="{% static 'img/png/filled-filter.png' %}">Opções de Filtro</button></a>
+                <a href="#"><button class="modal-form" onclick="modal_filter()"><img width="30" src="{% static 'img/png/filled-filter.png' %}">Opções de Filtro</button></a>
                 <!-- <button class="modal-form"><img width="30" src="{% static 'img/png/plus-signal.png' %}">Adicionar Categoria</button> -->
                     {% for message in messages %}
                         {% if 'safe' in message.tags %}
@@ -151,7 +150,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="filter">
+        <!-- <div class="filter">
             <div class="container-title-filter">
                 <label class="title-form">Opções de Filtro</label>  
             </div>
@@ -179,51 +178,64 @@
                     <button class="btn-clear" type="reset">Limpar</button>
                 </div>
             </form>
+        </div> -->
+    </div>   
 
-        </div>
-    </div>
-    <!-- <div class="modal-bg">
+    {% if items_list %}
+    <div class ="pagination">
+        <span class="step-links">
+            {% if items_list.has_previus %}
+            <a href="?page={{ items_list.previus_page_number}}"><i> previus </i></a>            
+            {% endif %}
+            
+            <span class="current">
+                {{ items_list.number}} de {{ items_list.paginator.num_pages}}
+            </span>
+            
+            {% if items_list.has_next %}
+            <a href="?page={{ items_list.next_page_number}}"><i> next </i></a>            
+            {% endif %}
+        </span>
+    </div>    
+    {% endif %}
+
+    <div class="modal-bg">
         <div class="modal">
-            <h2>Adicionar</h2> 
-            <form method="POST" autocomplete="off">
-                {% csrf_token %}
-                <p><input name="description" type="text" class="description_input" maxlength="100" required id="id_description" placeholder="Descrição"></p>
-                <p><input name="value" type="number" class="value_input" step="0.01" required id="id_value" placeholder="Valor 00,00"></p>
-                <p><input name="category" type="text" class="category_input" maxlength="50" required id="id_category" placeholder="Categoria"></p>
-                <p><input name="date" type="text" class="date_input" onblur="(this.type='text')" onfocus="(this.type='date')" placeholder="Data" required></p>
+            <h2>Filtrar por</h2> 
+            <form method="GET" autocomplete="off">
+                <fieldset>
+                    <label>Descrição:</label>
+                    <input id="word-key" name="word-key" type="search">
+                </fieldset>
+                <fieldset>
+                    <label>Data Inicial: </label>
+                    <input id="init-date" name="init-date" type="date">
+                    <label>Data Final: </label>
+                    <input id="end-date" name="end-date" type="date">
+                </fieldset>
+                <fieldset>
+                    <label>Valor Inicial</label>
+                    <input id="init-value" name="init-value" type="number">
+                    <label>Valor Final</label>
+                    <input id="end-value" name="end-value" type="number">
+                    <br>    
+                </fieldset>
                 <div class="btns-flex">
                     <button class="btn-send-form" type="submit">Confirmar</button>
                     <button class="btn-reset-form" type="reset">Limpar</button>
                 </div>
-                <span class="modal-close"><img width="30" src="{% static 'img/svg/close.svg' %}"></span>
+                <span onclick="close_modal_filter()" class="modal-close"><img width="30" src="{% static 'img/svg/close.svg' %}"></span>
             </form>
         </div>
-    </div> -->
     </div>
-
-    
-    
     
     <div class="graphic-container">
+    </div>
+
     <footer>
     </footer>
+
     <script src="{% static 'js/app.js' %}"></script>
     
-    <div class ="pagination">
-        <span class="step-links">
-            {% if items_list.has_previus %}
-                <a href="?page={{ items_list.previus_page_number}}"><i> previus </i></a>            
-            {% endif %}
-
-            <span class="current">
-                {{ items_list.number}} de {{ items_list.paginator.num_pages}}
-            </span>
-
-            {% if items_list.has_next %}
-                <a href="?page={{ items_list.next_page_number}}"><i> next </i></a>            
-            {% endif %}
-        </span>
-
-    </div>    
 </body>
 </html>
