change button href

--- a/Pmercurium/app_mercurium/templates/categories.html
+++ b/Pmercurium/app_mercurium/templates/categories.html
@@ -66,14 +66,14 @@
                         <td>{{cat.name}}</td>
                         <td>
                             <button class="btn_edit">
-                                <a href="update_cat/{{cat.id}}">
+                                <a href="/update_cat/{{cat.id}}">
                                     <img width="25" src="{% static 'img/svg/pencil-square.svg' %}">
                                 </a>
                             </button>
                         </td>
                         <td>                            
                             <button class="btn_delete">
-                                <a href="delete_cat/{{cat.id}}">
+                                <a href="/delete_cat/{{cat.id}}">
                                     <img width="25" src="{% static 'img/svg/trash-fill.svg' %}">
                                 </a>
                             </button>
