--- a/Pmercurium/app_mercurium/static/css/style.css
+++ b/Pmercurium/app_mercurium/static/css/style.css
@@ -72,7 +72,7 @@ body {
     background-size: 50%, 25%, 25%;
     width: 75%;
     min-width: 45rem;
-    height: 20%;
+    height: 10rem;
     margin-left: 15%;
     border-radius: 0px 0px 10px 10px;   
 }
@@ -93,7 +93,7 @@ body {
 
 /* Container Conteudo */
 .content-container {
-    width: 100%;
+    width: 75%;
     margin-left: 15%;
     display: flex;
     flex-direction: row; 
@@ -107,7 +107,7 @@ body {
 .main-table {
     z-index: 1;
     margin-top: 10px;
-    width: 75%;
+    width: 100%;
     text-align: center;
     overflow: hidden;
     border-collapse:separate; 
@@ -218,7 +218,7 @@ input[type=checkbox] {
 
 .pagination {
     margin-top: 10px;
-    width: 75%;
+    width: 100%;
     text-align: center;
 }
 
@@ -267,22 +267,6 @@ input[type=checkbox] {
     background-color:  rgb(194, 218, 194);
     color: green; 
     border: 1px solid green;
-}
-
-.pagination {
-    margin-bottom: 50 px;
-    text-align: center;
-}
-
-.step-links {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.step-links .current{
-    margin-left: 5px;
-    margin-right: 5px;
 }
 
 /* Modal Form */
@@ -380,22 +364,17 @@ button.modal-form:hover {
     h1 {
         font-size: 20px;
     }
-    .main-table thead tr th:nth-child(2), .main-table tbody tr td:nth-child(2) {
+    .main-table thead tr th:nth-child(6), .main-table tbody tr td:nth-child(6) {
         display: none;
     }
 }
 
 @media (max-width: 790px) {
-    .main-table thead tr th:nth-child(7), .main-table tbody tr td:nth-child(7) {
-        display: none;
-    }
+
 }
 
 @media (max-width: 360px) { 
     .sidebar {
-        display: none;
-    }
-    .main-table thead tr th:nth-child(2), .main-table tbody tr td:nth-child(2) {
         display: none;
     }
 }
