--- a/Pmercurium/app_mercurium/static/css/style.css
+++ b/Pmercurium/app_mercurium/static/css/style.css
@@ -71,13 +71,14 @@ body {
     background-color: var(--bm-color);
     background-size: 50%, 25%, 25%;
     width: 75%;
-    min-width: 45rem;
+    min-width: 47.5rem;
     height: 10rem;
+    max-height: 10rem;
     margin-left: 15%;
     border-radius: 0px 0px 10px 10px;   
 }
 
-.box-1, .box-2, .box-3, .box-4, .box-5, .box-6{
+.box-1, .box-2, .box-3, .box-4, .box-5, .box-6 {
     flex: 1;
     margin: 1.5%;
     background-color: white;
@@ -360,6 +361,17 @@ button.modal-form:hover {
     color: red;
 }
 
+.graphic-container {
+    margin-top: 1rem;
+    border-radius: 10px;
+    width: 75%;
+    min-width: 45rem;
+    height: 15rem;
+    margin-left: 15%;
+    background-color: white;
+    border: 3px solid var(--bm-color);
+}
+
 @media (max-width: 1030px) {
     h1 {
         font-size: 20px;
@@ -373,7 +385,33 @@ button.modal-form:hover {
 
 }
 
-@media (max-width: 360px) { 
+@media (max-width: 768px) { 
+
+    .content-container, .dashboard-container, .graphic-container {
+        margin-left: 3%;
+    }
+
+    .main-table thead tr th:nth-child(7), .main-table tbody tr td:nth-child(7) {
+        display: none;
+    } 
+    
+    /*
+    .dashboard-container {
+        flex-direction: column;
+        height: 25rem;
+        min-width: 25rem;
+    }
+
+    .dashboard-container h1 {
+        font-size: 0.8rem;
+    }
+    
+    .box-1, .box-2, .box-3, .box-4, .box-5, .box-6 {
+        margin: 2px;
+        font-size: 0.8rem;
+    } 
+    */
+
     .sidebar {
         display: none;
     }
