--- a/Pmercurium/app_mercurium/static/css/style.css
+++ b/Pmercurium/app_mercurium/static/css/style.css
@@ -12,6 +12,8 @@
     --bo-red-mes:#FF0000; /* background red button hover */ /* border color danger message */
     --co-red-mes: #bd0000; /* color danger message */
     --bg-gre-mes:#C2DAC2; 
+    --bg-gre-box: #cce4cc;
+    --bg-red-box: #e4cccc;
 }
 
 body {
@@ -51,6 +53,7 @@ body {
 }
 
 .sidebar a:hover:not(.active) {
+    transform: scale(1.1); 
     transition:0.3s;
     background-color: var(--bm-color);
     color: white;
@@ -78,7 +81,7 @@ body {
     border-radius: 0px 0px 10px 10px;   
 }
 
-.box-1, .box-2, .box-3, .box-4, .box-5, .box-6 {
+.box {
     flex: 1;
     margin: 1.5%;
     background-color: white;
@@ -90,6 +93,14 @@ body {
     text-align: center;
     font-weight: 500;
     font-size: 1rem;
+}
+
+.box-green {
+    background-color: var(--bg-gre-box);
+}
+
+.box-red {
+    background-color: var(--bg-red-box)
 }
 
 /* Container Conteudo */
@@ -122,6 +133,7 @@ body {
 .main-table tbody tr:hover{
     transition: 0.2s;
     opacity: 1;
+    transform: scale(1.01);     
 }
 
 .main-table thead tr th:last-child, .main-table tbody tr td:last-child {
@@ -226,7 +238,8 @@ input[type=checkbox] {
 .step-links {
     border-radius: 10px;
     padding: 5px;
-    border: solid 1px var(--bm-color);
+    line-height: 10px;
+    /* border: solid 1px var(--bm-color); */
     color:  var(--bo-color);
 }
 
@@ -292,6 +305,7 @@ button.modal-form img {
 }
 
 button.modal-form:hover {
+    transform: scale(1.02);
     color: white;
     transition: 0.2s;
     background-color: var(--bg-blue-btn-h);
@@ -361,15 +375,23 @@ button.modal-form:hover {
     color: red;
 }
 
-.graphic-container {
+.charts-container {
     margin-top: 1rem;
     border-radius: 10px;
     width: 75%;
     min-width: 45rem;
-    height: 15rem;
+    height: 21rem;
     margin-left: 15%;
     background-color: white;
     border: 3px solid var(--bm-color);
+}
+
+.chart-1 {
+    width: 22%;
+}
+
+#gain, #expense {
+    display: none;
 }
 
 @media (max-width: 1030px) {
@@ -381,13 +403,9 @@ button.modal-form:hover {
     }
 }
 
-@media (max-width: 790px) {
+@media (max-width: 840px) { 
 
-}
-
-@media (max-width: 768px) { 
-
-    .content-container, .dashboard-container, .graphic-container {
+    .content-container, .dashboard-container, .charts-container {
         margin-left: 3%;
     }
 
@@ -415,4 +433,9 @@ button.modal-form:hover {
     .sidebar {
         display: none;
     }
+
+    @media (max-width: 790px) {
+
+    }
+    
 }
