--- a/Pmercurium/app_mercurium/templates/update.html
+++ b/Pmercurium/app_mercurium/templates/update.html
@@ -21,7 +21,6 @@
         </a>
         <br>
         <a href="/categories.html">Categorias</a>
-        <a href="#">Gráfico</a>
         <a href="#">Relatório</a>
         <br>
         <a href="/trash.html">Lixeira</a>
@@ -38,5 +37,6 @@
     </div>
     <footer>
     </footer>
+    <script src="{% static 'js/app.js' %}"></script>
 </body>
 </html>
