--- a/Pmercurium/app_mercurium/templates/wallets.html
+++ b/Pmercurium/app_mercurium/templates/wallets.html
@@ -15,20 +15,36 @@
 </head>
 <body>
     <div class="sidebar">
-        <a class="logo" href="/"><img width="75" src="{% static 'img/svg/Logo_Mercurium.svg' %}">
+        <a class="logo" href="/list_transactions.html"><img width="75" src="{% static 'img/svg/Logo_Mercurium.svg' %}">
             <div class="title">Mercurium</div>
             <div class="sub-title">v 1.0</div>
         </a>
     </div>
     <div class="wallet-container">
+        <h1>Carteiras</h1>
         {% for wallet in wallets %}
             <div>
-                <a href="/"><button class="wallet">{{ wallet.name }}</button></a>
+                <a href="/"><button class="wallet">{{wallet.name}}</button></a>
             </div>
         {% endfor %}
         <div>
-            <a href="/"><button class="add-wallet"><img width="30" src="{% static 'img/png/plus-signal.png' %}"></button></a>
+            <a href="#"><button class="add-wallet" onclick="modal_wallet()"><img width="30" src="{% static 'img/png/plus-signal.png' %}"></button></a>
+        </div>
+    </div>
+    <div class="modal-wallet-bg">
+        <div class="modal">
+            <h2>Criar nova carteira</h2> 
+            <form action method="POST" autocomplete="off">
+                {% csrf_token %}
+                    <input id="id-wallet-name" name="name" type="text" placeholder="Nome Carteira">  
+                <div class="btns-flex">
+                    <button onclick="verify_filter_form()" class="btn-send-form" type="submit">Confirmar</button>
+                    <button class="btn-reset-form" type="reset">Limpar</button>
+                </div>
+                <span onclick="close_modal_wallet()" class="modal-close"><img width="30" src="{% static 'img/svg/close.svg' %}"></span>
+            </form>
         </div>
     </div>
 </body>
+<script src="{% static 'js/app.js' %}"></script>
 </html>
