--- a/Pmercurium/app_mercurium/templates/create.html
+++ b/Pmercurium/app_mercurium/templates/create.html
@@ -20,12 +20,12 @@
             <div class="title">Mercurium</div>
             <div class="sub-title">v 1.0</div>
         </a>
-        <br>
-        <a href="/categories.html">Categorias</a>
+        <!-- <br>
+        <a href="/categories/{{wallet.id}}">Categorias</a>
         <a href="#">Gráfico</a>
         <a href="#">Relatório</a>
         <br>
-        <a href="/trash.html">Lixeira</a>
+        <a href="/trash.html">Lixeira</a> -->
     </div>
     <div class="content-container">
         <div class="form-item">
