--- a/Pmercurium/app_mercurium/templates/create.html
+++ b/Pmercurium/app_mercurium/templates/create.html
@@ -28,6 +28,7 @@
         <a href="/trash.html">Lixeira</a> -->
     </div>
     <div class="content-container">
+        <a href="/wallet_transactions/{{wallet.id}}">AQUI PARA VOLTAR</a>
         <div class="form-item">
             <form action="" method="POST">
                 <h2>Adicionar Registro</h2>
