--- a/Pmercurium/app_mercurium/templates/trash.html
+++ b/Pmercurium/app_mercurium/templates/trash.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -20,7 +19,15 @@
         </a>
         <br>
         <br>
+        {% if user.is_authenticated %}
         <a href="/trash.html">Lixeira</a>
+        {% endif %}
+
+        {% if user.is_authenticated %}
+        <br>
+            <a href="/accounts/logout">Sair</a>
+        <br>
+        {% endif %}
     </div>
     <div class="content-container">
         <div class="table-container">
