--- a/Pmercurium/app_mercurium/templates/acesso_negado.html
+++ b/Pmercurium/app_mercurium/templates/acesso_negado.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>403</h1>
-    <h3>Acesso Negado</h3>
+    <h2>Acesso Negado</h2>
+    <p>Você não tem permissão para acessar essa área.</p>
 </body>
 </html>
