--- a/Pmercurium/app_mercurium/templates/wallet_transactions.html
+++ b/Pmercurium/app_mercurium/templates/wallet_transactions.html
@@ -211,22 +211,17 @@
             </form>
         </div>
     </div>
-    <span id="gain">{{gain.value__sum}}</span>
-    <span id="expense">{{expenses.value__sum}}</span>
     <div class="charts-container">
         <div class="chart-1">
             <canvas id="Categories"></canvas>
             <script type="text/javascript">
                 var ctx = document.getElementById('Categories').getContext('2d');
-                var gain =  document.getElementById('gain').innerText;
-                var expense =  document.getElementById('expense').innerText;
-                console.log(gain)
                 var Categories = new Chart(ctx, {
                     type: 'pie',
                     data: {
                         labels: ['Receita', 'Despesa'],
                         datasets: [{
-                            data: [gain, expense],
+                            data: [{{gain.value__sum}}, {{expenses.value__sum}}],
                             
                             backgroundColor: [
                                 'rgba(75, 192, 192, 1)',
